# nanovg-glfw-opengl3-minimal

./: .gitmodules  CMakeLists.txt
dep/glfw-3.3.7/lib/pkgconfig/: glfw3.pc
include/: color.h  draw.h  shape.h
src/: draw.cpp  main.cpp  shape.cpp
